# site-search

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  Justfile  LICENSE  README.md  config.toml.example  pyproject.toml
.github/workflows/: ci.yml
site_search/: __main__.py  chunker.py  cli.py  config.py  fetcher.py  generator.py  indexer.py  retriever.py
tests/: test_chunker.py  test_cli.py  test_config.py  test_fetcher.py  test_generator.py  test_indexer.py  test_retriever.py
