[project]
name = "site-search"
version = "0.1.0"
description = "Semantic search tool for websites using RAG"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "trafilatura>=2.0",
]

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pytest>=9.0.3",
    "ruff>=0.15.15",
]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "C90", # mccabe complexity
]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.mypy]
python_version = "3.14"
strict = true
pretty = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
filterwarnings = [
    "ignore::DeprecationWarning:tld",
]
