[project]
name = "site-search"
version = "0.1.0"
description = "Semantic search tool for websites using RAG"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.14"
dependencies = [
    "chromadb>=1.5.9",
    "click>=8.4.1",
    "httpx>=0.28.1",
    "langfuse>=4.7.1",
    "sentence-transformers>=5.5.1",
    "trafilatura>=2.0",
]

[project.scripts]
site-search = "site_search.cli:cli"

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pytest>=9.0.3",
    "ruff>=0.15.15",
]

[tool.uv]
package = true

[tool.setuptools.packages.find]
include = ["site_search*"]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "C90", # mccabe complexity
]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.mypy]
python_version = "3.14"
strict = true
pretty = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
filterwarnings = [
    "ignore::DeprecationWarning:tld",
    "ignore::DeprecationWarning:chromadb",
]
markers = [
    "local_only: test requires a gitignored fixture (copyrighted material) — skipped in CI",
]
